<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHoraAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="7dp"
        android:importantForAutofill="no"
        android:text="@string/hours_lesson_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etHoraAno"
        app:layout_constraintStart_toEndOf="@+id/etSalarioValorHora" />

    <TextView
        android:id="@+id/tvSalarioValorHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:importantForAutofill="no"
        android:text="@string/hour_value_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etSalarioValorHora"
        app:layout_constraintStart_toStartOf="@+id/etSalarioValorHora" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/author_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/name_label"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/id_label"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tvBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/rgTypes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="71dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etHoraAno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdade">

        <RadioButton
            android:id="@+id/rbHourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/professor_hour_label" />

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/professor_titular_label" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:text="@string/birth_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etIdade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:importantForAutofill="no"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <EditText
        android:id="@+id/etIdade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/rgTypes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBirth"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etSalarioValorHora"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHoraAno"
        app:layout_constraintEnd_toStartOf="@+id/etHoraAno"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etHoraAno"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSalarioValorHora"
        app:layout_constraintTop_toBottomOf="@+id/rgTypes"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:text="@string/calc_btn"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="@+id/etSalarioValorHora"
        app:layout_constraintStart_toEndOf="@+id/etSalarioValorHora"
        app:layout_constraintTop_toBottomOf="@+id/etHoraAno" />

</androidx.constraintlayout.widget.ConstraintLayout>